--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "express": "3.4.x",
+    "express": "^4.0.0",
     "ejs": "2.2.x",
-    "phantomjs": "1.9.x"
+    "phantomjs": "1.9.x",
+    "errorhandler": "^1.5.1"
   },
   "devDependencies": {
     "bower": "1.3.x",
